# aovec

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: model_release.yml  release.yml
aovec/: AozoraCloner.py  AozoraParser.py  AozoraVecMaker.py  main.py
src/: check_mecab.py
