[metadata]
name = aovec
version = attr: aovec.__version__
description = Make Word2Vec from aozorabunko/aozorabunko
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/aovec
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.10.0
    gensim>=4.0.1
    mecab-python3>=1.0.5
    python-Levenshtein>=0.12.2
    types-beautifulsoup4>=4.10.14
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    aovec=aovec.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-requests

[options.package_data]
aovec = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
